--- a/Kinovea.FileBrowser/Kinovea.FileBrowser.csproj
+++ b/Kinovea.FileBrowser/Kinovea.FileBrowser.csproj
@@ -357,6 +357,9 @@
   <ItemGroup>
     <None Include="Resources\replaywatcher2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\star.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="FixAL1703Warning" BeforeTargets="GenerateSatelliteAssemblies" Condition="'$(PlatformTarget)' == 'x64'">
     <Message Text="Adjusting SDK tools directory to use x64 version of AL.EXE" />
