--- a/Kinovea/Kinovea.csproj
+++ b/Kinovea/Kinovea.csproj
@@ -547,6 +547,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="kinovea-256x256.ico" />
+    <None Include="Resources\expand_16.png" />
+    <None Include="Resources\collapse-16.png" />
+    <None Include="Resources\redo-16.png" />
+    <None Include="Resources\undo-16.png" />
+    <None Include="Resources\file-browser.png" />
+    <None Include="Resources\navigation-pane.png" />
     <None Include="Resources\explorer_video.png" />
     <None Include="Resources\eye-16.png" />
     <None Include="Resources\variable-16.png" />
