--- a/Kinovea.ScreenManager/packages.config
+++ b/Kinovea.ScreenManager/packages.config
@@ -3,6 +3,7 @@
   <package id="CsvHelper" version="33.1.0" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml" version="3.0.2" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml.Framework" version="3.0.2" targetFramework="net48" />
+  <package id="FCTB" version="2.16.24" targetFramework="net48" />
   <package id="log4net" version="2.0.14" targetFramework="net48" />
   <package id="MathNet.Numerics" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
