--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,4 @@ Installer/build-*.txt
 /Tools/UnusedResources/UnusedResources/Results*
 /Installer/sign/*
 /Kinovea/sign.bat
+/Refs/ExpTreeLib/ExpTreeLib.xml
