Improvements to file system tree view.
- Rename system drives from "name (letter)" to "letter (name)".
- Filter out fluff from Desktop root.
- Auto-expand Computer.
- Hide dot folders from home folder.
- Hide non-drives from under Computer.
- Only show folders, not .zip.
- Disable * "expand all" shortcut.
- Full row select, remove border, vertical spacing.

--- a/ExpTreeLib/ExpTreeLib.vbproj
+++ b/ExpTreeLib/ExpTreeLib.vbproj
@@ -71,7 +71,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\Refs\</OutputPath>
+    <OutputPath>..\Refs\ExpTreeLib\</OutputPath>
     <DocumentationFile>ExpTreeLib.xml</DocumentationFile>
     <BaseAddress>285212672</BaseAddress>
     <ConfigurationOverrideFile>
