Add ffmpeg.exe to the output directory so it can be used in post-recording commands and by the main program.
This binary is coming from the release of Shotcut version 16.01 as it was using the same version of ffmpeg and the original build source is no longer available.

--- a/Kinovea.targets
+++ b/Kinovea.targets
@@ -27,6 +27,7 @@
     <Copy SourceFiles="..\Refs\FFmpeg\bin\$(Platform)\postproc-53.dll" DestinationFolder="$(TargetDir)"/>
     <Copy SourceFiles="..\Refs\FFmpeg\bin\$(Platform)\swresample-1.dll" DestinationFolder="$(TargetDir)"/>
     <Copy SourceFiles="..\Refs\FFmpeg\bin\$(Platform)\swscale-3.dll" DestinationFolder="$(TargetDir)"/>
+    <Copy SourceFiles="..\Refs\FFmpeg\bin\$(Platform)\ffmpeg.exe" DestinationFolder="$(TargetDir)"/>
         
     <Copy SourceFiles="..\Refs\Microsoft\$(Platform)\msvcm90.dll" DestinationFolder="$(TargetDir)"/>
     <Copy SourceFiles="..\Refs\Microsoft\$(Platform)\msvcp90.dll" DestinationFolder="$(TargetDir)"/>
