--- a/Kinovea/app.config
+++ b/Kinovea/app.config
@@ -6,6 +6,7 @@
     <runtime>
         <loadFromRemoteSources enabled="true" />
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <probing privatePath="Languages"/>
             <dependentAssembly>
                 <assemblyIdentity name="ICSharpCode.SharpZipLib" publicKeyToken="1b03e6acf1164f73" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-1.4.2.13" newVersion="1.4.2.13" />
