--- a/Kinovea.FileBrowser/packages.config
+++ b/Kinovea.FileBrowser/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="log4net" version="2.0.14" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
 </packages>
