--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -2299,9 +2299,6 @@
     <None Include="Resources\drawing-16.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\merge-vertical-16.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\scatter-plot-16.png" />
   </ItemGroup>
   <ItemGroup>
@@ -2540,6 +2537,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\id3-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bursts-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add-image-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\merge-vertical-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sort-left-16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sort-right-16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="FixAL1703Warning" BeforeTargets="GenerateSatelliteAssemblies" Condition="'$(PlatformTarget)' == 'x64'">
