--- a/Kinovea/Kinovea.csproj
+++ b/Kinovea/Kinovea.csproj
@@ -277,6 +277,7 @@
     <EmbeddedResource Include="Languages\RootLang.ar.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Languages\RootLang.az.resx" />
     <EmbeddedResource Include="Languages\RootLang.bg.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -308,6 +309,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Languages\RootLang.ru.resx" />
+    <EmbeddedResource Include="Languages\RootLang.sl.resx" />
     <EmbeddedResource Include="Languages\RootLang.sr-Cyrl-RS.resx" />
     <EmbeddedResource Include="Languages\RootLang.sr-Latn-RS.resx" />
     <EmbeddedResource Include="Languages\RootLang.sv.resx" />
