--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -1080,6 +1080,7 @@
     <EmbeddedResource Include="Languages\ScreenManagerLang.ar.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Languages\ScreenManagerLang.az.resx" />
     <EmbeddedResource Include="Languages\ScreenManagerLang.bg.resx" />
     <EmbeddedResource Include="Languages\ScreenManagerLang.ca.resx" />
     <EmbeddedResource Include="Languages\ScreenManagerLang.cs.resx" />
@@ -1096,6 +1097,7 @@
     <EmbeddedResource Include="Languages\ScreenManagerLang.ms.resx" />
     <EmbeddedResource Include="Languages\ScreenManagerLang.no.resx" />
     <EmbeddedResource Include="Languages\ScreenManagerLang.ru.resx" />
+    <EmbeddedResource Include="Languages\ScreenManagerLang.sl.resx" />
     <EmbeddedResource Include="Languages\ScreenManagerLang.sr-Cyrl-RS.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
