--- a/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
+++ b/Kinovea.ScreenManager/Kinovea.ScreenManager.csproj
@@ -1206,6 +1206,7 @@
     <EmbeddedResource Include="Properties\Capture.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Capture.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Drawings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
