--- a/Kinovea.Updater/Kinovea.Updater.csproj
+++ b/Kinovea.Updater/Kinovea.Updater.csproj
@@ -216,6 +216,7 @@
     <EmbeddedResource Include="Languages\UpdaterLang.cs.resx" />
     <EmbeddedResource Include="Languages\UpdaterLang.da.resx" />
     <EmbeddedResource Include="Languages\UpdaterLang.el.resx" />
+    <EmbeddedResource Include="Languages\UpdaterLang.et.resx" />
     <EmbeddedResource Include="Languages\UpdaterLang.fa.resx" />
     <EmbeddedResource Include="Languages\UpdaterLang.fi.resx" />
     <EmbeddedResource Include="Languages\UpdaterLang.hr.resx" />
