--- a/Kinovea/Kinovea.csproj
+++ b/Kinovea/Kinovea.csproj
@@ -317,6 +317,7 @@
     <EmbeddedResource Include="Languages\RootLang.th.resx" />
     <EmbeddedResource Include="Languages\RootLang.tr.resx" />
     <EmbeddedResource Include="Languages\RootLang.uk.resx" />
+    <EmbeddedResource Include="Languages\RootLang.vi.resx" />
     <EmbeddedResource Include="Languages\RootLang.Zh-CHS.resx" />
     <EmbeddedResource Include="Languages\RootLang.zh-Hant.resx" />
     <EmbeddedResource Include="Properties\Resources.resx">
